implementations/rust/ockam/ockam/tests/node_test/fail_if_function_is_not_async.stderr
error: the `async` keyword is missing from the function declaration
 --> $DIR/fail_if_function_is_not_async.rs:5:1
  |
5 | fn my_test(c: &mut ockam_node::Context) -> ockam_core::Result<()> {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_if_function_is_not_async.rs:4:1
  |
4 | / #[ockam::test]
5 | | fn my_test(c: &mut ockam_node::Context) -> ockam_core::Result<()> {
6 | |     c.stop().await.unwrap();
7 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_function_is_not_async.rs`
